2010-08-02  Antonio Gomes  <tonikitoo@webkit.org>

Reviewed by Kenneth Christiansen.

        [Qt] QtTestBrowser not setting preferredContentsSize for resizesToContents
        https://bugs.webkit.org/show_bug.cgi?id=43168

        QGraphicsWebView resizesToContents property has to work together with QWebPage's
        setPreferredContentsSize as stated by the docs. Patch addresses that for QtTestBrowser.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::applyPrefs):
        * QtTestBrowser/webview.h:
        (WebViewGraphicsBased::setCustomLayoutSize): Setter helper.
        (WebViewGraphicsBased::customLayoutSize): Getter helper.
        * QtTestBrowser/webview.cpp:
        (WebViewGraphicsBased::resizeEvent):
        (WebViewGraphicsBased::setResizesToContents): Properly handle scene, webview and viewport sizes
                                                      needed when toggle resizesToContents on/off.

Canonical link: https://commits.webkit.org/55378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64556 268f45cc-cd09-0410-ab3c-d52691b4dbfc